Fixed installation instructions in README. Used pytest in Travis CI script. Added additional pytest command line options. Fixed setup.py, removed f-strings, and defined public API in ale module.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,10 @@
 license_files = LICENSE
 
 [tool:pytest]
-addopts = --doctest-modules
+addopts =
+    --doctest-modules
+    --cov=alepython
+    -r a
+    -v
 markers =
     slow: mark a test as being very slow.
