--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: python
 python:
-  - "3.4"
-  - "3.5"
-  - "3.6"
-install: pip install -r requirements.txt
-script: python setup.py install
+    - "3.5"
+    - "3.6"
+    - "3.7"
+    - "3.8"
+before_install:
+    - python --version
+    - pip install -U pip
+install: pip install -e ".[test]"
+script: pytest
